@@ -1,5 +1,10 @@
 2010-04-23  Vincent Torri  <doursse at users dot sf dot net>
 
+	* src/lib/poppler/epdf_poppler_document.cpp:
+	remove useless __UNUSED__ definition
+
+2010-04-23  Vincent Torri  <doursse at users dot sf dot net>
+
 	* configure.ac:
 	* src/lib/Makefile.am:
 	auto import symbols on Windows, used m4 defined version
